⤴️ Changed website title

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://parinamais.github.io//parinamais.github.io"
 languageCode: en-us
-title: ParinaMais
+title: Marina's IndieDev Journey
 theme: PaperMod
 
 params:
