--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,10 @@ params:
   contentWidth: 800px
   padding: 1.5rem
   homeInfoParams:
-    Content: Welcome to my blog. Here you'll find a lot of info on m ystuff. Welcome to my blog. Here you'll find a lot of info on m ystuff.Welcome to my blog. Here you'll find a lot of info on m ystuff.Welcome to my blog. Here you'll find a lot of info on m ystuff.Welcome to my blog. Here you'll find a lot of info on m ystuff.
+    Title: Hi!
+    Content:  My name is Marina Pais, I'm a 3D & Tech Artist from Brazil, and I want to be an IndieGameDev!
+      Here, you will find devlogs of the games I'm currently working on, as well as breakdowns of the techniques I'm using, and a few rants about gamedev.
+      Feel free to interact in the comments section, and thank you for visiting my blog!
   socialIcons:
     - name: twitter
       url: "https://x.com/parinamais"
