⤴️ Updated the site's title and social network urls

--- a/config.yaml
+++ b/config.yaml
@@ -10,11 +10,13 @@ params:
   homeInfoParams:
     Title: Hi!
     Content:  My name is Marina Pais, I'm a 3D & Tech Artist from Brazil, and I want to be an IndieGameDev!
-      Here, you will find devlogs of the games I'm currently working on, as well as breakdowns of the techniques I'm using, and a few rants about gamedev.
-      Feel free to interact in the comments section, and thank you for visiting my blog!
+      Here, you will find devlogs of the games I'm currently working on, breakdowns of the techniques I'm using, and everything else that's helpful in my journey. 
+      Hope you like it, and thank you for visiting my blog!
   socialIcons:
-    - name: twitter
-      url: "https://x.com/parinamais"
+    - name: bluesky
+      url: "https://bsky.app/profile/parinamais.bsky.social"
+    - name: itchio
+      url: "https://parinamais.itch.io/"
     - name: linkedin
       url: "https://www.linkedin.com/in/parinamais/"
     - name: instagram
